--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -8,6 +8,11 @@
     <h3 class="text-center color-hf mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h3>
     <div class="container mb-3">
         <div class="row">
+            <div class="row">
+                <ul>
+                    <li th:each="auto : ${autoList}" th:text="${auto.name}"></li>
+                </ul>
+            </div>
             <div class="col-12 mt-5 col-md-6">
             <h5 class="color-hf">Chi siamo:</h5>
                 <p style="font-size: 13px">
