--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -15,7 +15,7 @@
             <th class="col-2 text-center">Nome Fornitore</th>
             <th class="col-1 text-center">Prezzo</th>
             <th class="col-2 text-center">Auto</th>
-            <th class="text-center col-1">Quantità Rifornimento</th>
+            <th class="text-center col-1">Quantità Rifornimento(Data)</th>
             <th class="text-center col-1">Quantità Totale(Auto)</th>
             <th class="text-center col-1">Quantità Venduta</th>
             <th class="text-center col-1">Quantità Magazzino</th>
@@ -26,7 +26,7 @@
             <th th:text="${rifo.id}" class="text-center"></th>
             <td th:text="${rifo.data}" class="text-center"></td>
             <td th:text="${rifo.nomeFornitore}" class="text-center"></td>
-            <td th:text="${rifo.price + ' €'}" class="text-center"></td>
+            <td th:text="${rifo.getAuto().getFormattedPrice() + ' €'}" class="text-center"></td>
             <td th:text="${rifo.getAuto().getName()}" th:if="${rifo.getAuto() != null}" class="text-center"></td>
             <td th:text="${rifo.quantita}" class="text-center"></td>
             <td th:text="${rifo.getAuto().acquisti()}" class="text-center"></td>
