--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -10,20 +10,25 @@
             <div class="col-12 text-center">
             <div class="col-12 text-center" style="padding: 0%">
                 <a th:href="@{/auto}">
-                    <img class="img-fluid shadow-lg" th:src="@{${auto.foto}}" style="transition: transform 0.3s; width: 100%; height: 400px;"
+                    <img class="img-fluid shadow-lg" th:src="${acquistoCliente.getAuto().getFoto()}" style="transition: transform 0.3s; width: 100%; height: 400px;"
                          onmouseover="this.style.transform='scale(1.030)'" onmouseout="this.style.transform='scale(1)'"
                          alt="foto">
                 </a>
             </div>
             <div class="col-12 text-center">
-                <h3 class="mt-2 card-title fw-bold text-warning" th:text="${auto.name}"></h3>
-                <h5 class="fw-bold text-light" th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
-                <p class="text-center card-text text-light" th:text="${auto.description}"></p>
-                <h5>Price: <span class="fw-bold text-success" th:text="${auto.getFormattedPrice()} + €"></span></h5>
+                <h3 class="mt-2 card-title fw-bold text-warning" th:text="${acquistoCliente.getAuto().getName()}"></h3>
+                <h5 class="fw-bold text-light" th:if="${acquistoCliente.getAuto().getAutoType() != null}" th:text="${acquistoCliente.getAuto().getAutoType().getName()}"></h5>
+                <p class="text-center card-text text-light" th:text="${acquistoCliente.getAuto().getDescription()}"></p>
+                <h5>Price: <span class="fw-bold text-success" th:text="${acquistoCliente.getAuto().getFormattedPrice()} + €"></span></h5>
                 <form th:action="@{/acquistoCliente/create}"
                 method="post" th:object="${acquistoCliente}">
                     <label for="quantita" class="form-label text-light">Quantità</label>
-                    <input class="form-input border-light" type="number" id="quantita" th:field="*{quantita}">
+                    <input class="form-input border-light" type="number" id="quantita" th:field="*{quantita}" th:errorClass="is-invalid">
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('quantita')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('quantita')}" th:text="${err}"></li>
+                        </ul>
+                    </div>
                     <input type="hidden" th:field="*{data}">
                     <input type="hidden" th:field="*{auto}">
                     <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
