--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments/resources :: head('Parco Auto')"></head>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Prompt:wght@200&display=swap" rel="stylesheet">
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<div class="container-fluid mt-5 border-bottom pb-4 bg-image bg-list">
-    <div class="row ms-5 g-5 flex-wrap justify-content-between">
-        <div class="alert alert-info col-12" th:if="${listaAuto.size() == 0}">Non ci sono auto per questa categoria</div>
-        <div th:if="${redirectMessage != null}" class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+<div class="container-fluid mt-3 border-bottom pb-4 bg-image bg-list">
+    <div class="row ms-5 g-4">
+        <div class="col-12 text-center"><h1 class="text-light"><strong
+                style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;">- Il nostro Parco Auto
+            -</strong></h1>
+            <div class="col-12 text-light" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;">
+                <h6><strong>- "Costruirò un'automobile per le masse... ma avrà un prezzo così basso che ogni uomo con un
+                    buon salario potrà comprarsene una." -</strong></h6>
+                <p><strong>H.Ford</strong></p>
+                <hr class="text-light">
+            </div>
+        </div>
+
+        <div class="alert alert-info col-12" th:if="${listaAuto.size() == 0}">Non ci sono auto per questa categoria
+        </div>
+        <div th:if="${redirectMessage != null}" class="alert alert-success alert-dismissible fade show mt-4"
+             role="alert">
             <div th:text="${redirectMessage}"></div>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
         <div class="col-md-4 animated bounceInDown" th:each="auto : ${listaAuto}">
-            <div class="card border border-dark ms-5" style="width: 17rem; padding: 0px;">
+            <div class="card border border-dark bg-dark ms-5" style="width: 17rem; padding: 0px;">
                 <a th:href="@{/auto/show/{id}(id=${auto.id})}">
-                <img th:src="${auto.foto}" class="card-img border border-dark" style="height: 150px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'" alt="foto">
+                    <img th:src="${auto.foto}" class="card-img border border-dark"
+                         style="height: 150px; transition: transform 0.3s;"
+                         onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"
+                         alt="foto">
                 </a>
                 <div class="card-body text-center">
-                    <h6 class="text-center"><strong>AUTOJAITA S.R.L.</strong></h6>
-                    <h5 th:text="${auto.name}" class="card-title text-center color-price-name"></h5>
-                    <p th:text="${auto.getFormattedPrice()} + €" class="fw-bold card-text text-center color-price-name"></p>
+                    <h6 class="text-center text-light"><strong>AUTOJAITA</strong></h6>
+                    <h5 th:text="${auto.name}" class="card-title text-center color-amministrazione"></h5>
+                    <p th:text="${auto.getFormattedPrice()} + €"
+                       class="fw-bold card-text text-center color-amministrazione"></p>
                     <div class="d-grid gap-2">
-                    <a th:href=@{/acquistoCliente/create/{id}(id=${auto.id})} class="btn btn-success btn-sm">Acquista</a>
-                        <a th:href="@{/auto/show/{id}(id=${auto.id})}" class="btn btn-outline-warning text-dark btn-sm">Dettagli</a>
+                        <a th:href=@{/acquistoCliente/create/{id}(id=${auto.id})} class="btn btn-success btn-sm">Acquista</a>
+                        <a th:href="@{/auto/show/{id}(id=${auto.id})}" class="btn btn-warning text-dark btn-sm">Dettagli</a>
                     </div>
                 </div>
             </div>
