--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -108,10 +108,10 @@
     </div>
 </header>
 <footer th:fragment="footer">
-    <div class="container-fluid bg-dark pt-4 pb-3 border-top">
+    <div class="container-fluid bg-dark pt-4 pb-1">
         <div class="row">
             <div class="col-12 text-light text-center">
-                <h4 class="color-amministrazione"><strong>- AUTOJAITA</strong><span class="fs-6"> S.R.L. -</span></h4>
+                <h4 class="color-amministrazione"><strong>- AUTOJAITA -</strong></h4>
                 <p class="color-amministrazione" style="font-size: 10px">partita iva: 0050000400009</p>
             </div>
             <div class="col-6 text-end text-light" style="font-size: 12px">
